fix weird navbar spacing

--- a/app/assets/stylesheets/modules/_notifications.scss
+++ b/app/assets/stylesheets/modules/_notifications.scss
@@ -1,9 +1,24 @@
 .notification-button {
-  &:before  {
+  height: $navbar-height;
+  width: 100%;
+  display: table;
+  text-align: center;
+
+    &:before  {
+      display: table-cell;
+    vertical-align: middle;
     font-family: "Glyphicons Halflings";
     content: "\e123";
+    font-size: 1.2em;
   }
 
+  &:after  {
+    display: table-cell;
+    vertical-align: middle;
+    font-family: "Glyphicons Halflings";
+    content: "\00a0\e252";
+    font-size: 8px;
+  }
 }
 
 .unread-notifications {
